Fixed bug in esl-alimanip.c: --seq-k, --seq-r and --reorder only work if msa->index (sequence name keyhash) is filled. These options remove a subset of sequences, keep only a subset of sequences, or reorder sequences in a MSA.
msa->index is filled for Stockholm alignments, but not AFA alignments
(and probably other formats). This meant that --seq-k, --seq-r and
--reorder would not work on AFA alignments. The 'fix' is to check that
the alignment file is Stockholm if one of these options is used and
exit with an error message if it isn't. I think this is okay because
these are 'expert' options and it's okay to require the expert user
reformat to stockholm before using them -- they can always reformat
back to the desired format afterwards.


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/branches/infernal@783 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/1.1/miniapps/esl-alimanip.man
+++ b/1.1/miniapps/esl-alimanip.man
@@ -39,7 +39,6 @@ are given.
 Print brief help;  includes version number and summary of
 all options, including expert options.
 
-
 .TP
 .BI -o " <f>"
 Save the resulting, modified alignment in Stockholm format to a file
@@ -81,16 +80,27 @@ is enabled, and the source code.
 
 .SH EXPERT OPTIONS
 
+.TP 
+.BI --lnfract " <x>"
+Remove any sequences with length less than 
+.I <x>
+fraction the length of the median length sequence in the alignment.
 
 .TP 
-.BI --lfract " <x>"
-Remove any sequences with length less than 
+.BI --lxfract " <x>"
+Remove any sequences with length more than 
 .I <x>
 fraction the length of the median length sequence in the alignment.
 
 .TP 
 .BI --lmin " <n>"
 Remove any sequences with length less than 
+.I <n>
+residues.
+
+.TP 
+.BI --lmax " <n>"
+Remove any sequences with length more than 
 .I <n>
 residues.
 
@@ -115,6 +125,7 @@ Remove any sequences with names listed in file
 Sequence names listed in 
 .I <f>
 can be separated by tabs, new lines, or spaces.
+The file must be in Stockholm format for this option to work. 
 
 .TP 
 .BI --seq-k " <f>"
@@ -131,6 +142,7 @@ but the order from
 will be used if the 
 .B --k-reorder
 option is enabled.
+The file must be in Stockholm format for this option to work. 
 
 .TP 
 .BI --small
@@ -230,6 +242,17 @@ tree is output in Newick format to
 .I <f>.
 
 .TP 
+.BI --reorder " <f>"
+Reorder sequences to the order listed in file 
+.I <f>.
+Each sequence in the alignment must be listed in 
+.I <f>.
+Use
+.B --k-reorder
+to reorder only a subset of sequences to a subset alignment file. 
+The file must be in Stockholm format for this option to work. 
+
+.TP 
 .BI --mask2rf " <f>"
 Read in the 'mask' file 
 .I <f>
@@ -268,17 +291,17 @@ Add annotation to the alignment numbering the non-gap (non '.') #=GC
 RF columns of the alignment. 
 
 .TP 
-.BI --sindi 
-Annotate individual secondary structures for each sequence by imposing
-the consensus secondary structure defined by the #=GC SS_cons
-annotation. 
-
-.TP 
 .BI --rm-gc " <s>"
 Remove certain types of #=GC annotation from the alignment. 
 .I "<s>" 
 must be either "RF", "SS_cons", "SA_cons", or "PP_cons",
 at present.
+
+.TP 
+.BI --sindi 
+Annotate individual secondary structures for each sequence by imposing
+the consensus secondary structure defined by the #=GC SS_cons
+annotation. 
 
 .TP 
 .BI --post2pp 
