--- a/documentation/codestyle.tex
+++ b/documentation/codestyle.tex
@@ -1288,6 +1288,25 @@ differ. When the comparison involves floating point scalar
 comparisons, a fractional tolerance argument \ccode{tol} is also
 passed. 
 
+\ccode{_Compare()} functions return \ccode{eslFAIL} rather than
+throwing an exception, because they may be used in a context where a
+``failure'' is expected; for example, when using
+\ccode{esl_dmatrix_Compare()} as a test for successful convergence of
+a matrix algebra routine. The main use of \ccode{_Compare()} functions
+is in unit tests. In a \ccode{make check} in a distribution, we
+generally want a unit test to detect failure and report its own error
+message, as opposed to throwing an exception immediately. During
+debugging and development, a problem with this style is that we don't
+get to see where the comparison failed. This is particularly
+frustrating in complicated data structures. Our code often gets around
+this by providing a compile-time flag (often called \ccode{killmenow})
+which cause the routine to immediately \ccode{abort()}. A common idiom
+is to set the \ccode{killmenow} flag to \ccode{FALSE} by default (to
+prevent it from being active in distro or production code) and set it
+to \ccode{TRUE} only when a flag indicates that development/debugging
+is in progress (such as HMMER's \ccode{p7_DEBUGGING} flag).
+
+
 \hypertarget{ifc:Encode}
 {\item[code = \_Encode*(char *s)]}
 
