`gunzip -dc` calls changed to `gzip -dc`, which is equivalent for GNU gzip.  OpenBSD does not have GNU gzip, it has a near-clone ("gratis" zip), and the OpenBSD `gunzip` does not accept the -d option. This fixes an esl_buffer_utest failure on our OpenBSD platform, reported by EPN.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@832 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_msa.tex
+++ b/esl_msa.tex
@@ -267,9 +267,9 @@ The module can read compressed alignment files.  If the
 \ccode{filename} passed to \ccode{esl\_msafile\_Open()} ends in
 \ccode{.gz}, the file is assumed to be compressed with gzip. Instead
 of opening it normally, \ccode{esl\_msafile\_Open()} opens it as a pipe
-through \ccode{gunzip -dc}. Obviously this only works on a POSIX
+through \ccode{gzip -dc}. Obviously this only works on a POSIX
 system -- pipes have to work, specifically the \ccode{popen()} system
-call -- and \ccode{gunzip} must be installed and in the PATH.
+call -- and \ccode{gzip} must be installed and in the PATH.
 
 The module can also read from a standard input pipe. If the
 \ccode{filename} passed to \ccode{esl\_msafile\_Open()} is \ccode{-},
