esl_gumbel: the 5 fitting routines now have normal error status codes, <eslEINVAL> and <eslENORESULT>. If number of data samples is <= 1, <eslEINVAL>. If the fit fails, likely because of insufficient data, <eslENORESULT>. Similar changes will be put into all stats fitting routines.
conjugate gradient descent minimizer now tests for oldfx = nan, not
just fx = +/-inf, as a test for certain impending failure on the data,
before iterations begin.

esl-selectn documentation now notes that it uses a reservoir sampling
algorithm, so I'm less likely to forget it's highly memory efficient
and can be applied to effectively infinite datasets.

removed mixgev and msafile (temporarily, I trust) from the
documentation Makefile, because these modules lack .tex files.

updated some copyright and credit info, while thinking about switching
to an even more permissive license (cc zero?) but the problem is we do
have other OSS code in here, and I'm not sure we can even adopt a
fully compatible BSD-ish license; we're forced into using GPL as a
universal acceptor, I think.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@891 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/esl-selectn.man
+++ b/miniapps/esl-selectn.man
@@ -30,8 +30,8 @@ input is read from
 .I stdin.
 
 .pp
-The algorithm used is efficient, requiring only a single pass through
-.I filename
+Uses a reservoir sampling algorithm, which is efficient: requires only a single pass through
+.I filename,
 and memory storage proportional to 
 .I nlines
 (and importantly, not to the size of
